[tool.poetry]
name = "vflattopdf"
version = "0.1.0"
description = ""
authors = ["kiwon <kw9101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
reportlab = "^4.0.5"
pyclovaocr = "^1.0"
easyocr = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
