[tool.poetry]
name = "vflattopdf"
version = "0.1.0"
description = ""
authors = ["kiwon <kw9101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
reportlab = "^4.0.5"
pyclovaocr = "^1.0"
easyocr = "^1.7.1"
tqdm = "^4.66.1"
torch = {version = "^2.0.1+cu118", source = "pytorch", platform = "WIN32|WIN64"}
torchvision = {version = "^0.15.2+cu118", source = "pytorch", platform = "WIN32|WIN64"}
torchaudio = {version = "^2.0.2+cu118", source = "pytorch", platform = "WIN32|WIN64"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
